--- a/src/components/articles/Articles.scss
+++ b/src/components/articles/Articles.scss
@@ -8,6 +8,7 @@
 	&__box {
 		display: flex;
 		flex-wrap: wrap;
+		justify-content: space-between;
 	}
 
 	&__button {
@@ -23,10 +24,9 @@
 }
 
 .articles-item {
-	width: 30%;
-	border-radius: 10px;
+	width: 32%;
+	border-radius: 20px;
 	box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.50);
-	margin-right: 30px;
 	margin-bottom: 60px;
 
 	&__img {
