--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -1,10 +1,51 @@
-* {
-	box-sizing: border-box;
+@font-face {
+	font-family: 'Raleway';
+	src: url('../../assets/fonts/raleway/Raleway-Bold.woff2') format('woff2'),
+		url('../../assets/fonts/raleway/Raleway-Bold.woff') format('woff'),
+		url('../../assets/fonts/raleway/Raleway-Bold.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'Raleway';
+	src: url('../../assets/fonts/raleway/Raleway-Regular.woff2') format('woff2'),
+		url('../../assets/fonts/raleway/Raleway-Regular.woff') format('woff'),
+		url('../../assets/fonts/raleway/Raleway-Regular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('../../assets/fonts/roboto/Roboto-Bold.woff2') format('woff2'),
+		url('../../assets/fonts/roboto/Roboto-Bold.woff') format('woff'),
+		url('../../assets/fonts/roboto/Roboto-Bold.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('../../assets/fonts/roboto/Roboto-Regular.woff2') format('woff2'),
+		url('../../assets/fonts/roboto/Roboto-Regular.woff') format('woff'),
+		url('../../assets/fonts/roboto/Roboto-Regular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap;
 }
 
 html {
 	font-size: 16px;
+	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
+}
+
+* {
+	box-sizing: border-box;
 }
 
 .container {
