--- a/src/components/filterDoctor/FilterDoctor.scss
+++ b/src/components/filterDoctor/FilterDoctor.scss
@@ -1,46 +1,46 @@
-@font-face {
-	font-family: "Bahnschrift";
-	src: local("Bahnschrift-Regular"),
-		url("../../assets/fonts/Bahnschrift-Regular.woff2") format("woff2"),
-		url("../../assets/fonts/Bahnschrift-Regular.woff") format("woff"),
-        url("../../assets/fonts/Bahnschrift-Regular.ttf") format("ttf");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
+// @font-face {
+// 	font-family: "Bahnschrift";
+// 	src: local("Bahnschrift-Regular"),
+// 		url("../../assets/fonts/Bahnschrift-Regular.woff2") format("woff2"),
+// 		url("../../assets/fonts/Bahnschrift-Regular.woff") format("woff"),
+//         url("../../assets/fonts/Bahnschrift-Regular.ttf") format("ttf");
+//   font-weight: 400;
+//   font-style: normal;
+//   font-display: swap;
+// }
 
-@font-face {
-	font-family: "Bahnschrift";
-	src: local("Bahnschrift-Bold"),
-		url("../../assets/fonts/Bahnschrift-Bold.woff2") format("woff2"),
-		url("../../assets/fonts/Bahnschrift-Bold.woff") format("woff"),
-        url("../../assets/fonts/Bahnschrift-Bold.ttf") format("ttf");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
+// @font-face {
+// 	font-family: "Bahnschrift";
+// 	src: local("Bahnschrift-Bold"),
+// 		url("../../assets/fonts/Bahnschrift-Bold.woff2") format("woff2"),
+// 		url("../../assets/fonts/Bahnschrift-Bold.woff") format("woff"),
+//         url("../../assets/fonts/Bahnschrift-Bold.ttf") format("ttf");
+//   font-weight: 700;
+//   font-style: normal;
+//   font-display: swap;
+// }
 
-@font-face {
-	font-family: "Raleway";
-	src: local("Raleway-Regular"),
-		url("../../assets/fonts/Raleway-Regular.woff2") format("woff2"),
-		url("../../assets/fonts/Raleway-Regular.woff") format("woff"),
-        url("../../assets/fonts/Raleway-Regular.ttf") format("ttf");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
+// @font-face {
+// 	font-family: "Raleway";
+// 	src: local("Raleway-Regular"),
+// 		url("../../assets/fonts/Raleway-Regular.woff2") format("woff2"),
+// 		url("../../assets/fonts/Raleway-Regular.woff") format("woff"),
+//         url("../../assets/fonts/Raleway-Regular.ttf") format("ttf");
+//   font-weight: 400;
+//   font-style: normal;
+//   font-display: swap;
+// }
 
-@font-face {
-	font-family: "Raleway";
-	src: local("Raleway-Bold"),
-		url("../../assets/fonts/Raleway-Bold.woff2") format("woff2"),
-		url("../../assets/fonts/Raleway-Bold.woff") format("woff"),
-        url("../../assets/fonts/Raleway-Bold.ttf") format("ttf");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
+// @font-face {
+// 	font-family: "Raleway";
+// 	src: local("Raleway-Bold"),
+// 		url("../../assets/fonts/Raleway-Bold.woff2") format("woff2"),
+// 		url("../../assets/fonts/Raleway-Bold.woff") format("woff"),
+//         url("../../assets/fonts/Raleway-Bold.ttf") format("ttf");
+//   font-weight: 700;
+//   font-style: normal;
+//   font-display: swap;
+// }
 
 .filter {
     padding: 60px 0;
