--- a/src/components/filterDoctor/FilterDoctor.scss
+++ b/src/components/filterDoctor/FilterDoctor.scss
@@ -1,153 +1,210 @@
-// @font-face {
-// 	font-family: "Bahnschrift";
-// 	src: local("Bahnschrift-Regular"),
-// 		url("../../assets/fonts/Bahnschrift-Regular.woff2") format("woff2"),
-// 		url("../../assets/fonts/Bahnschrift-Regular.woff") format("woff"),
-//         url("../../assets/fonts/Bahnschrift-Regular.ttf") format("ttf");
-//   font-weight: 400;
-//   font-style: normal;
-//   font-display: swap;
+// // @font-face {
+// // 	font-family: "Bahnschrift";
+// // 	src: local("Bahnschrift-Regular"),
+// // 		url("../../assets/fonts/Bahnschrift-Regular.woff2") format("woff2"),
+// // 		url("../../assets/fonts/Bahnschrift-Regular.woff") format("woff"),
+// //         url("../../assets/fonts/Bahnschrift-Regular.ttf") format("ttf");
+// //   font-weight: 400;
+// //   font-style: normal;
+// //   font-display: swap;
+// // }
+
+// // @font-face {
+// // 	font-family: "Bahnschrift";
+// // 	src: local("Bahnschrift-Bold"),
+// // 		url("../../assets/fonts/Bahnschrift-Bold.woff2") format("woff2"),
+// // 		url("../../assets/fonts/Bahnschrift-Bold.woff") format("woff"),
+// //         url("../../assets/fonts/Bahnschrift-Bold.ttf") format("ttf");
+// //   font-weight: 700;
+// //   font-style: normal;
+// //   font-display: swap;
+// // }
+
+// // @font-face {
+// // 	font-family: "Raleway";
+// // 	src: local("Raleway-Regular"),
+// // 		url("../../assets/fonts/Raleway-Regular.woff2") format("woff2"),
+// // 		url("../../assets/fonts/Raleway-Regular.woff") format("woff"),
+// //         url("../../assets/fonts/Raleway-Regular.ttf") format("ttf");
+// //   font-weight: 400;
+// //   font-style: normal;
+// //   font-display: swap;
+// // }
+
+// // @font-face {
+// // 	font-family: "Raleway";
+// // 	src: local("Raleway-Bold"),
+// // 		url("../../assets/fonts/Raleway-Bold.woff2") format("woff2"),
+// // 		url("../../assets/fonts/Raleway-Bold.woff") format("woff"),
+// //         url("../../assets/fonts/Raleway-Bold.ttf") format("ttf");
+// //   font-weight: 700;
+// //   font-style: normal;
+// //   font-display: swap;
+// // }
+
+// .filter {
+//   padding: 60px 0;
+
+//   &__title {
+//     margin-bottom: 30px;
+//     font-family: Raleway;
+//     font-size: 40px;
+//     font-style: normal;
+//     font-weight: 700;
+//     line-height: normal;
+//   }
+
+//   &__buttons {
+//     display: flex;
+//     margin-bottom: 63px;
+//   }
+
+//   &__popup {
+//     display: flex;
+//   }
+
+//   &__cards {
+//     border-radius: 12.766px;
+//     background: #fff;
+//   }
+
+//   &__cards:not(:last-child) {
+//     margin-bottom: 43px;
+//   }
+
+//   &__info {
+//   }
 // }
 
-// @font-face {
-// 	font-family: "Bahnschrift";
-// 	src: local("Bahnschrift-Bold"),
-// 		url("../../assets/fonts/Bahnschrift-Bold.woff2") format("woff2"),
-// 		url("../../assets/fonts/Bahnschrift-Bold.woff") format("woff"),
-//         url("../../assets/fonts/Bahnschrift-Bold.ttf") format("ttf");
-//   font-weight: 700;
-//   font-style: normal;
-//   font-display: swap;
+// .filter-buttons {
+//   &__button {
+//     display: flex;
+//     height: 64px;
+//     min-height: 64px;
+//     padding: 0px 32px;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     gap: 4px;
+//     border-radius: 16px;
+//     border: 2px solid #3066be;
+//     background: none;
+//     transition: all 0.2s ease-in-out;
+
+//     /* Raleway 24px,regular (400) */
+//     color: #3066be;
+//     font-family: Raleway;
+//     font-size: 24px;
+//     font-style: normal;
+//     font-weight: 400;
+//     line-height: normal;
+//   }
+//   &__button:hover {
+//     background: #3066be20;
+//   }
+//   &__button:active {
+//     background: #3066be30;
+//   }
+
+//   &__hr {
+//     color: rgba(0, 0, 0, 0.5);
+//     height: auto;
+//     margin-top: 1em;
+//     margin-bottom: 1em;
+//     margin-left: 32px;
+//     margin-right: 32px;
+//     border-style: solid;
+//     border-width: 1px;
+//     border-radius: 16px;
+//   }
 // }
 
-// @font-face {
-// 	font-family: "Raleway";
-// 	src: local("Raleway-Regular"),
-// 		url("../../assets/fonts/Raleway-Regular.woff2") format("woff2"),
-// 		url("../../assets/fonts/Raleway-Regular.woff") format("woff"),
-//         url("../../assets/fonts/Raleway-Regular.ttf") format("ttf");
-//   font-weight: 400;
-//   font-style: normal;
-//   font-display: swap;
+// .popup {
+//   &-content {
+//     gap: 16px;
+//     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.5);
+//     border-radius: 16px;
+//     padding: 16px;
+//     margin-bottom: 32px;
+//   }
+// }
+// .cards {
+//   &-doctor {
+//     display: flex;
+//     padding: 16px;
+//     border-radius: 16px;
+//     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.5);
+//   }
+// }
+// .card {
+//   &__img {
+//     border-radius: 16px;
+//     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.5);
+//   }
+// }
+// .info {
+//   &__up {
+//   }
+
+//   &__down {
+//   }
+// }
+// .filter_info {
 // }
 
-// @font-face {
-// 	font-family: "Raleway";
-// 	src: local("Raleway-Bold"),
-// 		url("../../assets/fonts/Raleway-Bold.woff2") format("woff2"),
-// 		url("../../assets/fonts/Raleway-Bold.woff") format("woff"),
-//         url("../../assets/fonts/Raleway-Bold.ttf") format("ttf");
-//   font-weight: 700;
-//   font-style: normal;
-//   font-display: swap;
-// }
+// New scss
 
+.doctor-card {
+  &__info {
+  }
+  &__img {
+  }
+  &__rating {
+  }
+  &__review-info {
+  }
+  &__up {
+  }
+  &__name {
+  }
+  &__experience {
+  }
+  &__category {
+  }
+  &__academic-degree {
+  }
+  &__down {
+  }
+  &__clinic-name {
+  }
+  &__clinic-address {
+  }
+  &__clinic-ul {
+  }
+  &__admission-type {
+  }
+  &__phone-number {
+  }
+  &__appointment-cost {
+  }
+}
 .filter {
-  padding: 60px 0;
-
-  &__title {
-    margin-bottom: 30px;
-    font-family: Raleway;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+  &_info {
   }
-
-  &__buttons {
-    display: flex;
-    margin-bottom: 63px;
-  }
-
-  &__popup {
-    display: flex;
-  }
-
   &__cards {
-    border-radius: 12.766px;
-    background: #fff;
   }
-
-  &__cards:not(:last-child) {
-    margin-bottom: 43px;
-  }
-
   &__info {
   }
 }
-
-.filter-buttons {
-  &__button {
-    display: flex;
-    height: 64px;
-    min-height: 64px;
-    padding: 0px 32px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-    border-radius: 16px;
-    border: 2px solid #3066be;
-    background: none;
-    transition: all 0.2s ease-in-out;
-
-    /* Raleway 24px,regular (400) */
-    color: #3066be;
-    font-family: Raleway;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-  &__button:hover {
-    background: #3066be20;
-  }
-  &__button:active {
-    background: #3066be30;
-  }
-
-  &__hr {
-    color: rgba(0, 0, 0, 0.5);
-    height: auto;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    margin-left: 32px;
-    margin-right: 32px;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 16px;
-  }
-}
-
-.popup {
-  &-content {
-    gap: 16px;
-    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.5);
-    border-radius: 16px;
-    padding: 16px;
-    margin-bottom: 32px;
-  }
-}
-.cards {
-  &-doctor {
-    display: flex;
-    padding: 16px;
-    border-radius: 16px;
-    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.5);
-  }
+.cards-doctor {
 }
 .card {
   &__img {
-    border-radius: 16px;
-    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.5);
   }
 }
 .info {
   &__up {
   }
-
   &__down {
   }
-}
-.filter_info {
 }
