--- a/src/components/filterDoctor/FilterDoctor.scss
+++ b/src/components/filterDoctor/FilterDoctor.scss
@@ -161,118 +161,79 @@
 
 // DoctorCard
 
-.doctor-card {
-  display: flex;
-  flex-direction: row;
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.5);
-  padding: 32px;
-  &__info:first-child{
-    align-items: center;
+.articles {
+
+  &-item {
   }
+
+  &__container {
+  }
+
+  &__title {
+  }
+
+  &__box {
+  }
+
+  &__item {
+  }
+
+  &__button {
+  }
+}
+.container {
+}
+.title {
+
+  &-h2 {
+  }
+
+  &-h3 {
+  }
+}
+.articles-item {
+
+  &__img {
+  }
+
+  &__box {
+  }
+
+  &__company {
+  }
+
+  &__logo {
+  }
+
+  &__name {
+  }
+
+  &__title {
+  }
+
+  &__text {
+  }
+
+  &__button {
+  }
+
   &__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    &__img {
-      border-radius: 16px;
-    }
-
-    &__rating {
-      // Add styles for rating
-    }
-
-    &__review-info {
-      // Add styles for review info
-    }
-
-    &__up {
-      width: 70%;
-
-      &-name {
-        font-size: 1.5rem;
-        margin: 0px;
-      }
-
-      &__experience {
-        font-size: 1rem;
-        margin-bottom: 4px;
-      }
-
-      &__category,
-      &__academic-degree {
-        margin-bottom: 4px;
-        font-size: 0.9rem;
-        color: #555;
-      }
-    }
-
-    &__down {
-      width: 30%;
-      // Add styles for the bottom part of info
-    }
   }
 
-  &__clinic-name {
-    font-size: 1.2rem;
-    margin-bottom: 8px;
+  &__data {
   }
 
-  &__clinic-address {
-    font-size: 1rem;
-    color: #555;
-    margin-bottom: 8px;
-  }
+  &__views {
 
-  &__clinic-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-
-    li {
-      font-size: 0.9rem;
-      color: #555;
-      margin-bottom: 4px;
+    &-img {
     }
-  }
 
-  &__admission-type {
-    font-size: 1rem;
-    margin-bottom: 8px;
-  }
-
-  &__phone-number {
-    display: flex;
-    align-items: center;
-    font-size: 1rem;
-    margin-bottom: 8px;
-
-    svg {
-      margin-right: 8px;
-      // Add styles for the phone icon
+    &-text {
     }
   }
 }
+.text {
 
-// SortOptions
-.sort-options {
-  &__button {
-    // Styles for the button container
-    background-color: #2bad47;
-    color: #fff;
-    padding: 10px 20px;
-    cursor: pointer;
-    border: none;
-    margin-bottom: 10px;
-
-    &:hover {
-      background-color: #208c3e;
-    }
-
-    &__icon {
-      // Styles for the icon inside the button
-      margin-left: 5px;
-      fill: #fff;
-    }
+  &-h3 {
   }
 }
