--- a/src/components/filterDoctor/FilterDoctor.scss
+++ b/src/components/filterDoctor/FilterDoctor.scss
@@ -61,6 +61,10 @@
   }
 
   &__popup {
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 16px;
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.2);
     border-radius: 16px;
@@ -161,6 +165,22 @@
     &:active {
       background: #3066be40;
     }
+  }
+}
+
+.sort-options {
+  &__button {
+    border: none;
+    border-bottom: 3px solid #3066BE;
+    background-color: transparent;
+  }
+
+  &__button:nth-child(1) {
+    max-width: fit-content;
+  }
+
+  &__button:nth-child(2) {
+    max-width: fit-content;
   }
 }
 
