--- a/src/components/articles/Articles.scss
+++ b/src/components/articles/Articles.scss
@@ -2,6 +2,9 @@
 	padding: 60px 0;
 
 	&__title {
+		font-family: 'Raleway';
+		font-weight: 700;
+		font-size: 2.7rem;
 		margin-bottom: 30px;
 	}
 
@@ -12,14 +15,22 @@
 	}
 
 	&__button {
-		border-radius: 10px;
-		box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
-		background: white;
-		border: none;
+		font-family: 'Raleway';
+		font-weight: 400;
+		font-size: 1.5rem;
+		border-radius: 20px;
+		color: #3066BE;
+		background: none;
+		border: 3px solid #3066BE;
 		cursor: pointer;
-		padding: 10px 60px;
+		padding: 18px 32px;
 		display: block;
 		margin: 0 auto;
+
+		&:hover {
+			background: #6D9DC5;
+			color: #FFFFFF;
+		}
 	}
 }
 
@@ -38,52 +49,51 @@
 	}
 
 	&__title {
-		min-height: 75px;
+		font-family: 'Raleway';
+		font-weight: 700;
+		font-size: 1.5rem;
+		min-height: 60px;
 		margin: 20px 0;
 	}
 
 	&__text {
+		font-family: 'Raleway';
+		font-size: 1rem;
 		text-align: justify;
-		min-height: 135px;
+		min-height: 105px;
 		margin: 20px 0;
-	}
-
-	&__company {
-		display: flex;
-		align-items: center;
-	}
-
-	&__logo {
-		margin-right: 10px;
-	}
-
-	&__button {
-		border-radius: 30px;
-		background: #ABD2EF;
-		padding: 5px 25px;
-		cursor: pointer;
-		border: none;
-		display: block;
-		margin: 0 auto;
-		margin-bottom: 30px;
-
 	}
 
 	&__info {
 		display: flex;
 		justify-content: space-between;
-
-		p {
-			margin: 0;
-		}
-	}
-
-	&__views {
-		display: flex;
 		align-items: center;
 	}
 
-	&__views-img {
-		margin-right: 5px;
+	&__theme {
+		font-family: 'Raleway';
+		font-weight: 700;
+		font-size: 1rem;
+		color: #BE3030;
+		padding: 8px;
+		border-radius: 20px;
+		background: #BE303033;
+	}
+
+	&__date {
+		font-family: 'Raleway';
+		font-weight: 700;
+		font-size: 1rem;
+		color: #BE3030;
+	}
+
+	&__button {
+		font-family: 'Raleway';
+		font-weight: 700;
+		font-size: 1rem;
+		background: none;
+		color: #BE3030;
+		border: none;
+		cursor: pointer;
 	}
 }
