--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -49,6 +49,8 @@
             text-align: center;
             letter-spacing: 0em;
             font-weight: 400;
+			position: relative;
+			z-index: 20;
         }
     }
 
