--- a/src/components/articlesItem/ArticlesItem.scss
+++ b/src/components/articlesItem/ArticlesItem.scss
@@ -1,44 +1,9 @@
-.articles {
-	padding: 60px 0;
-
-	&__title {
-		font-family: 'Raleway';
-		font-weight: 700;
-		font-size: 2.7rem;
-		margin-bottom: 30px;
-	}
-
-	&__box {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-	}
-
-	&__button {
-		font-family: 'Raleway';
-		font-weight: 400;
-		font-size: 1.5rem;
-		border-radius: 20px;
-		color: #3066BE;
-		background: none;
-		border: 3px solid #3066BE;
-		cursor: pointer;
-		padding: 18px 32px;
-		display: block;
-		margin: 0 auto;
-
-		&:hover {
-			background: #6D9DC5;
-			color: #FFFFFF;
-		}
-	}
-}
-
 .articles-item {
 	width: 32%;
 	border-radius: 20px;
 	box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.50);
 	margin-bottom: 60px;
+	list-style-type: none;
 
 	&__img {
 		width: 100%;
