--- a/src/components/enterList/enterList.scss
+++ b/src/components/enterList/enterList.scss
@@ -1,6 +1,6 @@
 .enter {
-
     &__container {
+        padding: 32px 0px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -8,13 +8,11 @@
 
     &__logo {
         max-width: 234px;
-        margin-top: 32px;
-        margin-bottom: 280px;
+        margin: 0;
     }
 
     &__copyright {
-        margin-top: 342px;
-        margin-bottom: 32px;
+        margin: 0;
         color: #3066BE;
         font-variant-numeric: lining-nums proportional-nums;
         font-family: Raleway;
