--- a/src/components/enterList/enterList.scss
+++ b/src/components/enterList/enterList.scss
@@ -1,5 +1,6 @@
 .enter {
     &__container {
+        min-height: 964px;
         padding: 32px 0px;
         display: flex;
         flex-direction: column;
