--- a/src/components/enterClient/EnterClient.scss
+++ b/src/components/enterClient/EnterClient.scss
@@ -43,9 +43,49 @@
         padding: 16px;
         min-height: 64px;
         border-radius: var(--corner-radius-r-16, 16px);
-        border: 2px solid #87CDD1;
+        border: none;
+        outline: 2px solid #87CDD1;
         background: var(--pallet-color-11005, #FFF);
+        font-family: Raleway;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        transition: outline 0.3s ease-in-out;
     }
+
+    &__input:not(:placeholder-shown) {
+        outline: 2px solid #1758C2;
+    }
+
+    &__input:hover {
+        outline: 2px solid #1758C2;
+    }
+
+    &__input:focus {
+        outline: 2px solid #1758C2;
+    }
+
+    &__input:active {
+        outline: 2px solid #1758C2;
+    }
+
+    &__input::placeholder {
+        transition: opacity 0.3s ease-in-out;
+    }
+
+    &__input::placeholder{
+        opacity: 0.5;
+    }
+
+    &__input:hover::placeholder {
+        opacity: 1;
+    }
+
+    &__input:focus::placeholder {
+        opacity: 1;
+    }
+
 
     &__span {
         margin-top: 4px;
@@ -84,11 +124,37 @@
         font-weight: 400;
         line-height: normal;
         cursor: pointer;
+        transition: background-color 0.3s ease-in-out;
+    }
+
+    &__button:hover {
+        background-color: #6D9DC5;;
+    }
+
+    &__button:active {
+        background-color: #1758C2;
     }
 }
 
 .error {
     &__input {
-        border: 2px solid #BE3030;
+        outline: 2px solid #BE3030;
+        transition: outline 0.3s;
+    }
+
+    &__input:hover {
+        outline: 2px solid #BE3030;
+    }
+
+    &__input:focus {
+        outline: 2px solid #BE3030;
+    }
+
+    &__input:active {
+        outline: 2px solid #BE3030;
+    }
+
+    &__input:not(:placeholder-shown) {
+        outline: 2px solid #BE3030;
     }
 }
