--- a/src/components/navBars/profileInfo/ProfileInfo.scss
+++ b/src/components/navBars/profileInfo/ProfileInfo.scss
@@ -156,7 +156,7 @@
     flex-wrap: wrap;
     gap: 16px;
     width: 100%;
-  
+
     .text {
       background: #d7e7ff;
       padding: 16px;
@@ -184,6 +184,21 @@
     align-items: flex-end;
     gap: 16px;
     margin-top: 16px;
+
+    .save {
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #3066be;
+    }
+
+    .cancel {
+      background: none;
+      border: none;
+      color: black;
+      opacity: 25%;
+      cursor: pointer;
+    }
 
     .edit {
       background: none;
