--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -160,18 +160,18 @@
 
     &__button-item {
         user-select: none;
-        display: flex;
         width: 148px;
         height: 50px;
         background: rgba(48, 102, 190, 1);
         color: rgba(255, 255, 255, 1);
         border-radius: 8px;
         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+        
 
         p {
             font-size: 20px;
             font-family: 'Raleway';
-            margin: 8.5% 0 0 32%;
+            margin: 10px 0;
             font-weight: 400;
         }
     }
