--- a/src/components/navBars/asidePanel/AsidePanel.scss
+++ b/src/components/navBars/asidePanel/AsidePanel.scss
@@ -48,6 +48,11 @@
     color: #3066be;
     transition: color, background 0.2s ease;
 
+    &.disabled {
+      pointer-events: none;
+      opacity: 0.5;
+    }
+
     &:hover:not(:focus) {
       outline: 2px solid #3066be;
     }
