--- a/src/components/navBars/profileUser/ProfileUser.scss
+++ b/src/components/navBars/profileUser/ProfileUser.scss
@@ -29,7 +29,7 @@
     background: #f2f2f2;
     width: 150px;
     height: 150px;
-    border-radius: 16px;
+    border-radius: 8px;
     transition: all 0.2s ease-in-out;
 
     &:hover {
@@ -183,7 +183,6 @@
     flex-direction: column;
     align-items: flex-end;
     gap: 16px;
-    margin-top: 16px;
 
     .save {
       background: none;
@@ -205,28 +204,6 @@
       border: none;
       cursor: pointer;
       color: #3066be;
-
-      &__popup {
-        position: fixed;
-        right: 0;
-        top: 50%;
-        transform: translateX(100%) translateY(-50%);
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        padding: 16px;
-        border-radius: 16px 0 0 16px;
-        z-index: 999;
-        animation: slideIn 0.25s ease-out forwards;
-      }
-
-      @keyframes slideIn {
-        from {
-          transform: translateX(100%) translateY(-50%);
-        }
-        to {
-          transform: translateX(0) translateY(-50%);
-        }
-      }
     }
 
     .delete {
@@ -235,33 +212,38 @@
       color: black;
       opacity: 25%;
       cursor: pointer;
-
-      &__popup {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        padding: 15px;
-        border-radius: 5px;
-        z-index: 999;
-
-        &-button {
-          display: flex;
-          justify-content: space-between;
-
-          .yes, .no {
-            border: none;
-            background: none;
-            cursor: pointer;
-          }
-          
-          .yes {
-            opacity: .5;
-          }
-        }
-      }
     }
+  }
+
+  &__additionally {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+  &__licenses,
+  &__education,
+  &__qualification,
+  &__experience {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    .add {
+      width: 10%;
+      display: flex;
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #3066be;
+    }
+  }
+
+  .inDev {
+    filter: blur(1px);
+    background: #f2f2f2;
+    opacity: 0.5;
+    border-radius: 8px;
+    padding: 8px;
+    pointer-events: none;
   }
 }
