--- a/src/components/navBars/settingsInfo/SettingsInfo.scss
+++ b/src/components/navBars/settingsInfo/SettingsInfo.scss
@@ -1,30 +1,32 @@
 .settings {
 
     &__wrapper {
+        display: flex;
+        flex-direction: column;
     }
 
     &__title {
         margin: 0;
-        margin-bottom: 16px;
-        color: #000;
-        font-family: Raleway;
-        font-size: 24px;
-        font-style: normal;
+        font-size: var(--title-font-size);
         font-weight: 700;
-        line-height: normal;
+        margin-bottom: 16px;
     }
 
     &__notice {
-        margin-bottom: 24px;
+        margin-bottom: 16px;
         border-bottom: 1px solid #DADADA;
     }
 
     &__password {
+        width: 350px;
         display: flex;
         flex-direction: column;
-        margin-bottom: 24px;
-        padding-bottom: 24px;
-        border-bottom: 1px solid #DADADA;
+        input {
+            padding: 8px;
+            border-radius: 8px;
+            border: 1px solid #87CDD1;
+            margin-bottom: 16px
+        }
     }
 
     &__control {
@@ -46,7 +48,7 @@
         margin: 0;
         color: #000;
         font-family: Raleway;
-        font-size: 24px;
+        font-size: var(--title-font-size);
         font-style: normal;
         font-weight: 400;
         line-height: normal;
@@ -56,7 +58,7 @@
         margin: 0;
         color: rgba(0, 0, 0, 0.50);
         font-family: Raleway;
-        font-size: 20px;
+        font-size: var(--description-font-size);
         font-style: normal;
         font-weight: 400;
         line-height: normal;
@@ -117,7 +119,7 @@
         margin-bottom: 32px;
         color: rgba(0, 0, 0, 0.50);
         font-family: Raleway;
-        font-size: 20px;
+        font-size: var(--description-font-size);
         font-style: normal;
         font-weight: 400;
         line-height: normal;
@@ -127,41 +129,31 @@
         display: flex;
         flex-direction: column;
         align-items: flex-end;
+        gap: 16px;
     }
 
     &__button {
         display: flex;
-        width: 296px;
-        min-height: 54px;
-        padding: 0px 32px;
-        flex-direction: column;
+        padding: 16px;
+        width: 20%;
         justify-content: center;
         align-items: center;
-        gap: 4px;
         background-color: transparent;
         border: none;
-        border-radius: 16px;
+        border-radius: 8px;
         outline: 2px solid #3066BE;
         cursor: pointer;
     }
 
     &__button:first-child {
-        margin-bottom: 16px;
         color: #3066BE;
-        font-family: Raleway;
-        font-size: 20px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
+        font-size: var(--title-font-size);
     }
 
     &__button:last-child {
         color: #FD5050;
         font-family: Raleway;
-        font-size: 20px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
+        font-size: var(--title-font-size);
     }
 }
   
