--- a/src/components/navBars/headerPanel/HeaderPanel.scss
+++ b/src/components/navBars/headerPanel/HeaderPanel.scss
@@ -20,6 +20,17 @@
       align-items: center;
       gap: 32px;
     }
+
+    &-link {
+      display: inline-flex;
+      width: 100%;
+
+      span {
+        display: inline-flex;
+        width: 100%;
+        font-weight: 700;
+      }
+    }
   }
 
   &__burger-icon {
