--- a/src/components/doctorDetailedItem/DoctorDetailedItem.scss
+++ b/src/components/doctorDetailedItem/DoctorDetailedItem.scss
@@ -7,28 +7,62 @@
 		margin-bottom: 60px;
 	}
 
-	&__wrapper {
+	&__wrapper-first {
 		display: flex;
 		justify-content: space-between;
+		margin-bottom: 30px;
 	}
 
-	&__wrapper-left {
+	&__wrapper-first-left {
 		display: flex;
 		flex-direction: column;
-		width: 45%;
+		width: 40%;
 		gap: 30px;
 	}
 
-	&__wrapper-item {
+	&__wrapper-first-center {
+		width: 25%;
+	}
+
+	&__wrapper-first-right {
+		width: 25%;
+	}
+
+	&__wrapper-first-item {
 		display: flex;
 		gap: 30px;
 	}
 
-	&__description {
+	&__description-first {
 		width: 100%;
 		height: 100%;
 		padding: 20px;
 		background: #ffffff;
 		border-radius: 20px;
+	}
+
+	&__wrapper-second {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	&__wrapper-second-left {
+		width: 25%;
+	}
+
+	&__wrapper-second-right {
+		width: 70%;
+	}
+
+	&__description-second {
+		padding: 20px;
+		background: #ffffff;
+		border-radius: 20px;
+		margin-bottom: 30px;
+
+		&_nav {
+			position: sticky;
+			top: 30px;
+		}
 	}
 }
