--- a/src/components/UI/modals/controlModal/ControlModal.module.scss
+++ b/src/components/UI/modals/controlModal/ControlModal.module.scss
@@ -1,42 +1,63 @@
-// ControlModal.module.scss
-
 .modalBackdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  z-index: 1;
+  position: absolute;
+  top: 130px;
+  right: 136px;
+  width: 100px;
+}
+
+.modalContent {
+  display: inline-flex;
+  align-items: center;
+  padding: 8px;
+  border-radius: 8px;
+  border: 1px solid #eaf0f8;
+  background-color: #fff;
+  box-shadow: 0 0 4px 0px rgba(0, 0, 0, 0.2);
+  &.open {
+    animation: open 0.1s ease-out forwards;
   }
-  
-  .modalContent {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    position: relative;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+
+  &.close {
+    animation: close 0.1s ease-out forwards;
   }
-  
-  .closeButton {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  &__delete,
+  &__edit,
+  &__save {
     cursor: pointer;
+    // width: 24px;
+    // height: 24px;
+    // padding: 4px;
+    border-radius: 4px;
+    background: #eaf0f8;
+    border: none;
+
+    &:hover {
+      outline: 2px solid rgba($color: #3066be, $alpha: 0.3);
+    }
   }
-  
-  h2 {
-    margin-bottom: 15px;
+
+  @keyframes open {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
-  
-  button {
-    margin-right: 10px;
-    padding: 10px;
-    cursor: pointer;
+
+  @keyframes close {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
   }
-  
-  // Add any additional styles as needed
-  
+}
