--- a/src/components/navBars/asidePanel/AsidePanel.scss
+++ b/src/components/navBars/asidePanel/AsidePanel.scss
@@ -48,8 +48,6 @@
     color: #3066be;
     transition: color, background 0.2s ease;
 
-   
-
     &.disabled {
       pointer-events: none;
       opacity: 0.5;
@@ -62,6 +60,10 @@
     &:focus {
       color: white;
       background: #3b78da;
+      .aside-panel__icon img {
+        filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%)
+          hue-rotate(93deg) brightness(103%) contrast(103%);
+      }
     }
     &.active {
       color: white;
