--- a/src/components/navBars/NavBars.scss
+++ b/src/components/navBars/NavBars.scss
@@ -1,6 +1,8 @@
-html {
-  background: #f2f2f2;
-}
+// html {
+//   background: #f2f2f2;
+// }
+
+
 
 .grid-container {
   display: grid;
@@ -9,6 +11,12 @@ html {
   grid-gap: 16px;
   max-width: 1700px;
   margin: 16px auto;
+
+  font-family: Raleway;
+  font-size: 16px;
+  font-style: normal;
+  line-height: normal;
+  font-variant-numeric: lining-nums proportional-nums;
 
   @media (max-width: 1920px) {
     max-width: 1700px;
