--- a/src/components/doctorDetailedItem/DoctorDetailedItem.scss
+++ b/src/components/doctorDetailedItem/DoctorDetailedItem.scss
@@ -42,6 +42,80 @@
 		border-radius: 20px;
 	}
 
+	&__license-img{
+		max-width: 69px;
+		max-height: 99px;
+		cursor: pointer;
+	}
+
+	&__license-img:not(:nth-child(5)){
+		margin-right: 16px;
+	}
+
+	&__license-button{
+		margin-left: auto;
+		width: 161px;
+		height: 35px;
+		border-radius: 15.381px;
+		border: none;
+		background: var(--pallet-color-11005, #FFF);
+		box-shadow: 0px 0px 15.381px 0px rgba(0, 0, 0, 0.25);
+		color: #000;
+		font-family: Raleway;
+		font-size: 12px;
+		font-style: normal;
+		font-weight: 500;
+		line-height: normal;
+		cursor: pointer;
+	}
+
+	&__flex{
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-end;
+	}
+
+	&__modal{
+		padding: 34px;
+		width: 1144px;
+		height: max-content;
+	}
+
+	&__modal-title {
+		margin: 0;
+		margin-bottom: 12px;
+		color: #000;
+		font-family: Raleway;
+		font-size: 40px;
+		font-style: normal;
+		font-weight: 700;
+		line-height: normal;
+		text-transform: uppercase;
+	}
+
+	&__modal-descr {
+		margin: 0;
+		margin-bottom: 32px;
+		color: #000;
+		font-family: Raleway;
+		font-size: 16px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: normal;
+	}
+
+	&__modal-license-img{
+		cursor: pointer;
+	}
+
+	&__modal-license-img:not(:nth-child(5n)){
+		margin-right: 32px;
+	}
+
+	&__modal-license-img:not(:first-child):not(:nth-child(2)):not(:nth-child(3)):not(:nth-child(4)):not(:nth-child(5)){
+		margin-top: 32px;
+	}
+
 	&__description {
 		padding: 20px;
 		background: #ffffff;
