--- a/src/components/navBars/root.scss
+++ b/src/components/navBars/root.scss
@@ -1,6 +1,21 @@
 :root {
-    --title-font-size: 16px;
-    --description-font-size: 16px;
-    --main-border-radius: 16px;
-    --secondary-border-radius: 8px;
+  --title-font-size: 16px;
+  --description-font-size: 16px;
+  --main-border-radius: 16px;
+  --secondary-border-radius: 8px;
 }
+
+// ::-webkit-scrollbar {
+//   width: 6px;
+// }
+// ::-webkit-scrollbar-track {
+//   width: 5px;
+// }
+// ::-webkit-scrollbar-track {
+//   background: #ffffff;
+// }
+// ::-webkit-scrollbar-thumb {
+//   background-color: #7e7c7e;
+//   border-radius: 8px;
+//   border: 10px dashed #7e7c7e;
+// }
