--- a/src/components/navBars/editUser/EditUser.scss
+++ b/src/components/navBars/editUser/EditUser.scss
@@ -41,4 +41,25 @@
       font-size: 16px;
     }
   }
+  &__action-button {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: flex-end;
+    .save,
+    .cancel {
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #3066be;
+    }
+    .cancel {
+      color: black;
+      opacity: 25%;
+    }
+  }
+
+  &__error-message{
+    font-size: 12px;
+  }
 }
