--- a/src/components/navBars/cardsItem/CardsItem.scss
+++ b/src/components/navBars/cardsItem/CardsItem.scss
@@ -11,23 +11,29 @@
     padding: 8px;
     width: 100%;
     height: 100%;
+    max-width: 180px;
+    max-height: 250px;
     gap: 8px;
     border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.05);
+    // border: 1px solid rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.25);
     background: #fff;
   }
 
   &__photo {
     display: flex;
     align-items: center;
-    width: 100px;
-    height: 100px;
-    border: 1px solid rgba(0, 0, 0, 0.05);
+    width: 100%;
+    height: 100%;
+    max-width: 146px;
+    max-height: 146px;
+    // border: 1px solid rgba(0, 0, 0, 0.05);
     border-radius: 8px;
     overflow: hidden;
     img {
-      border-radius: 8px;
       width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
   &__name {
