edit instruction scrollbar

--- a/src/components/constructorFilter/ConstructorFilter.scss
+++ b/src/components/constructorFilter/ConstructorFilter.scss
@@ -91,9 +91,6 @@
         margin-right: -30px;
         overflow-y: scroll;
 
-        ::-webkit-scrollbar-track {
-            background: #000;
-        }
 
         &-title {
             margin: 0;
@@ -132,5 +129,53 @@
         &-text:last-child {
             margin-bottom: 30px;
         }
+    }
+
+    &__instruction-modal::-webkit-scrollbar {
+        width: 30px;
+        border-radius: 4px;
+        border: 0.5px solid rgba(48, 102, 190, 0.54);
+        background: white;
+    }
+
+    &__instruction-modal::-webkit-scrollbar-thumb {
+        border-radius: 20px;
+        background: #5985CB;
+    }
+
+    &__instruction-modal::-webkit-scrollbar-thumb:hover {
+        background: #41649b;
+    }
+
+    &__instruction-modal::-webkit-scrollbar-thumb:active {
+        background: #6e96d6;
+    }
+
+    &__instruction-modal::-webkit-scrollbar-button {
+        background-color: white; /* Цвет фона стрелок */
+        background-repeat: no-repeat;
+        border: 0.5px solid rgba(48, 102, 190, 0.54)
+    }
+
+    &__instruction-modal::-webkit-scrollbar-button:vertical {
+        height: 40px;
+    }
+
+    &__instruction-modal::-webkit-scrollbar-button:vertical:start {
+        background-image: url('../../assets/icons/instruction-up-arrow.svg'); /* Замените на свой путь к изображению */
+        background-position: center center;
+    }
+    
+    &__instruction-modal::-webkit-scrollbar-button:vertical:end {
+        background-image: url('../../assets/icons/instruction-down-arrow.svg'); /* Замените на свой путь к изображению */
+        background-position: center center;
+    }
+
+    &__instruction-modal::-webkit-scrollbar-button:hover {
+        background-color: rgb(211, 211, 211);
+    }
+
+    &__instruction-modal::-webkit-scrollbar-button:active {
+        background-color: rgb(230, 230, 230);
     }
 }
