add part of face

--- a/src/components/about_operation/About_operation.scss
+++ b/src/components/about_operation/About_operation.scss
@@ -1,48 +1,70 @@
-.parents{
-    position: absolute;
-    left: 850px;
-    top: 300px;
-    padding-left: 32px;
-    border-left: 1px solid gray;
+.about-operation {
 
-}
+    &__parents {
+        position: absolute;
+        left: 850px;
+        top: 300px;
+        padding-left: 32px;
+        border-left: 1px solid gray;
+        font-family: Raleway;
+    }
+    &__header{
+        padding-right: 32px;
+        display: flex;
+        gap: 20px;
+    }
 
-.head{
-    color: #3066BE;
-    font-family: Raleway;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
+    &__head {
+        color: #3066BE;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
 
-.text{
-    width: 754px;
-    height: 115px;
-    flex-shrink: 0;
-    color: #000;
-    text-align: justify;
-    font-family: Raleway;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
+    &__text {
+        width: 754px;
+        height: 115px;
+        flex-shrink: 0;
+        color: #000;
+        text-align: justify;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
 
-.text2{
-    color: #000;
-    font-family: Raleway;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-transform: uppercase;
-    opacity: 0.5;
-}
+    &__text2 {
+        color: #000;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        text-transform: uppercase;
+        opacity: 0.5;
+    }
 
-.button{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 200px;
+    &__button {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 200px;
+    }
+
+    &__face {
+        display: inline-flex;
+        padding: var(--CornerRadius-r8, 8px);
+        justify-content: center;
+        align-items: center;
+        gap: var(--CornerRadius-r8, 8px);
+        border-radius: var(--CornerRadius-r16, 16px);
+        background: rgba(190, 48, 48, 0.20);
+        color: #BE3030;
+        font-family: Raleway;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
+
 }
